# MARS

./: .env.example  .gitignore  BUILDS.md  LICENSE  README.md  SKILL.md  config.example.yaml  pyproject.toml
.github/workflows/: secret-scan.yml
evals/: README.md  check_frozen_sessions.py
evals/expected/: b2c_voice.json  ciso.json  stt.json  voice_lts.json
evals/live/: README.md
examples/: architecture-example.yaml  prd-example.yaml  workflow-example.yaml
mars/: __init__.py  analysis.py  artifact.py  cli.py  config.py  keys.py  loop.py  models.py  output.py  registry.py  schemas.py  session.py  setup_wizard.py
mars/roles/: __init__.py  adversarial.py  orchestrator.py  primary.py
prompts/: adversarial.txt  orchestrator.txt  primary.txt  rebuttal.txt
